--- a/diseno-y-desarrollo-web.html
+++ b/diseno-y-desarrollo-web.html
@@ -98,6 +98,11 @@
                 <a target="_blank" href="https://www.limpiamarmc.com.co/"><button class="btn-cta">Ver Sitio Web</button></a>
             </article>
             <article class="grid-item">
+                <img src="files/images/diseno-y-desarrollo-web/diseno-y-desarrollo-web-lms-moodle-petroworks.png" alt="Petroworks">
+                <p class="meta"><b>Cliente:</b> Petroworks</p>
+                <a target="_blank" href="https://apps2.petroworks.com.co:18080/"><button class="btn-cta">Ver login LMS</button></a>
+            </article>
+            <article class="grid-item">
                 <img src="files/images/diseno-y-desarrollo-web/diseno-y-desarrollo-web-mioficina.png" alt="Mi Oficina.co">
                 <p class="meta"><b>Cliente:</b> Mi Oficina.co</p>
                 <a target="_blank" href="https://mioficina.co/"><button class="btn-cta">Ver Sitio Web</button></a>
