--- a/diseno-publicitario.html
+++ b/diseno-publicitario.html
@@ -88,6 +88,21 @@
         <!-- Grids de artículos -->
         <section class="grid-container">
             <article class="grid-item">
+                <img src="files/images/diseno-publicitario/diseno-publicitario-brochure-gintic.png" alt="Brochure Corporativo Gintic">
+                <h2>Brochure Corporativo</h2>
+                <p class="meta"><b>Cliente:</b> Gintic</p>
+            </article>
+            <article class="grid-item">
+                <img src="files/images/diseno-publicitario/diseno-publicitario-brochure-gintic-2.png" alt="Brochure Corporativo Gintic">
+                <h2>Brochure Corporativo</h2>
+                <p class="meta"><b>Cliente:</b> Gintic</p>
+            </article>
+            <article class="grid-item">
+                <img src="files/images/diseno-publicitario/brochure-desarrollo-de-software-gintic.png" alt="Brochure Corporativo sobre Desarrollo de Software a la Medida Gintic">
+                <h2>Brochure Corporativo sobre Desarrollo de Software a la Medida</h2>
+                <p class="meta"><b>Cliente:</b> Gintic</p>
+            </article>
+            <article class="grid-item">
                 <img src="files/images/diseno-publicitario/diseno-publicitario-agenda-mioficina.png" alt="Agenda Mi Oficina.co">
                 <h2>Agenda</h2>
                 <p class="meta"><b>Cliente:</b> Mi Oficina.co</p>
