--- a/diseno-publicitario.html
+++ b/diseno-publicitario.html
@@ -292,6 +292,21 @@
                 <h2>Diseño de Góndolas</h2>
                 <p class="meta"><b>Cliente:</b> Maped Colombia</p>
             </article>
+            <article class="grid-item">
+                <img src="files/images/diseno-publicitario/imagen-cartagena.jpg" alt="Recordatorio de Bodas Alexandra Otalora">
+                <h2>Recordatorio de Bodas</h2>
+                <p class="meta"><b>Cliente:</b> Alexandra Otalora</p>
+            </article>
+            <article class="grid-item">
+                <img src="files/images/diseno-publicitario/recordatorio-de-servilletas-en-satin-abierto.jpg" alt="Recordatorio de Bodas Servilletas en Satin Abierto Alexandra Otalora">
+                <h2>Recordatorio de Bodas Servilletas en Satin Abierto</h2>
+                <p class="meta"><b>Cliente:</b> Alexandra Otalora</p>
+            </article>
+            <article class="grid-item">
+                <img src="files/images/diseno-publicitario/recordatorio-de-servilletas-en-satin-cerrado.jpg" alt="Recordatorio de Bodas Servilletas en Satin Cerrado Alexandra Otalora">
+                <h2>Recordatorio de Bodas Servilletas en Satin Cerrado</h2>
+                <p class="meta"><b>Cliente:</b> Alexandra Otalora</p>
+            </article>
             <!-- Aquí puedes añadir más artículos -->
         </section>
 
