--- a/diseno-y-desarrollo-web.html
+++ b/diseno-y-desarrollo-web.html
@@ -88,6 +88,11 @@
         <!-- Grids de artículos -->
         <section class="grid-container">
             <article class="grid-item">
+                <img src="files/images/diseno-y-desarrollo-web/diseno-y-desarrollo-web-arttricolor.png" alt="Grupo Koneko">
+                <p class="meta"><b>Cliente:</b> Grupo Koneko</p>
+                <a target="_blank" href="https://www.grupokoneko.com/"><button class="btn-cta">Ver Sitio Web</button></a>
+            </article>
+            <article class="grid-item">
                 <img src="files/images/diseno-y-desarrollo-web/diseno-y-desarrollo-web-arttricolor.png" alt="Art Tricolor">
                 <p class="meta"><b>Cliente:</b> Art Tricolor</p>
                 <a target="_blank" href="https://artworldartistico.wixsite.com/artes"><button class="btn-cta">Ver Sitio Web</button></a>
