--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <!-- Sección Nuestros Servicios -->
     <section id="servicios">
-        <h2>Nuestros Servicios</h2>
+        <h2>SERVICIOS</h2>
         <div class="grid-container">
             <div class="grid-item">
                 <img src="files/images/diseno-de-paginas-web.png" alt="Diseño de páginas web">
@@ -244,7 +244,7 @@
 
     <!-- Sección Nuestros Proyectos -->
     <section class="nuestros-proyectos" id="proyectos">
-        <h2>Conoce nuestros proyectos</h2>
+        <h2>PROYECTOS FINALIZADOS</h2>
         
         <div class="proyectos-grid">
             <a href="identidad-de-marca.html"><div class="proyecto-item">
@@ -271,7 +271,7 @@
 
     <!-- Sección de Clientes con efecto hover -->
     <section class="clientes">
-        <h1>Confían en nosotros</h1>
+        <h1>MARCAS QUE HAN CONFIADO EN NOSOTROS</h1>
         <div class="clientes-logos">
             <img src="files/images/nuestros-clientes/logo-grupo-koneko.png" alt="Grupo Koneko">
             <img src="https://static.wixstatic.com/media/ad82ef_51caddfd26284877a57df03d7b2da7f5~mv2.png/v1/crop/x_68,y_128,w_362,h_174/fill/w_500,h_240,al_c,lg_1,q_85,enc_auto/Logo%20House%20Koneko%20(4).png" alt="House Koneko">
@@ -295,7 +295,7 @@
     <section class="section-form" id="contacto">
         <div id="formUser">
             <form class="form" id="form">
-                <h1 class="title-contact">Cuéntanos sobre tu proyecto</h1>
+                <h1 class="title-contact">ESCRÍBENOS</h1>
                 <div class="container-form">
                     <div class="input-container">
                         <i class="fa-solid fa-user icon"></i><span>|</span>
