--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     <!-- Sección Nuestro Equipo -->
     <section class="nuestro-equipo">
-        <h2>NUESTRO EQUIPO DE TRABAJO</h2>
+        <h2>NUESTRO EQUIPO</h2>
         
         <div class="equipo-grid">
             <!-- Grid 1: Jheraldin Huertas -->
