--- a/diseno-de-logotipos.html
+++ b/diseno-de-logotipos.html
@@ -92,8 +92,20 @@
                 <p class="meta"><b>Cliente:</b> Dulce Mágia</p>
             </article>
             <article class="grid-item">
-                <img src="files/images/diseno-de-logotipos/logo-krysalida.png" alt="Krysalida">
+                <img src="files/images/diseno-de-logotipos/logo-krysalida.jpg" alt="Krysalida">
                 <p class="meta"><b>Cliente:</b> Krysalida</p>
+            </article>
+            <article class="grid-item">
+                <img src="files/images/diseno-de-logotipos/logo-esencia-dorada.jpg" alt="Esencia Dorada">
+                <p class="meta"><b>Cliente:</b> Esencia Dorada</p>
+            </article>
+            <article class="grid-item">
+                <img src="files/images/diseno-de-logotipos/logo-vinculo-maternal.jpg" alt="Vínculo Maternal">
+                <p class="meta"><b>Cliente:</b> Vínculo Maternal</p>
+            </article>
+            <article class="grid-item">
+                <img src="files/images/diseno-de-logotipos/logo-crece-sonriendo.jpg" alt="Crece Sonriendo">
+                <p class="meta"><b>Cliente:</b> Crece Sonriendo</p>
             </article>
             <article class="grid-item">
                 <img src="files/images/diseno-de-logotipos/Logo-Andy-System.jpg" alt="Andi System">
