--- a/linktree.studioryh/index.html
+++ b/linktree.studioryh/index.html
@@ -15,7 +15,7 @@
     <!-- Incluye SweetAlert en tu archivo HTML -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <title>@studio_r&h</title>
+    <title>@studior&h</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,17 +30,8 @@
             <img src="https://pps.whatsapp.net/v/t61.24694-24/429469472_399426146187672_4556857148393606436_n.jpg?ccb=11-4&oh=01_Q5AaIBxL7VR0rdHRLqj9Iplh9-hpL9zBhtVV2E82biV3mfJ-&oe=663002EC&_nc_sid=e6ed6c&_nc_cat=108" alt="" class="profile">
             <img src="img/menu-bar.png" alt="" class="menu">
         </div>
-        <h3 class="name">@studio_r&h_</h3>
+        <h3 class="name">@studior&h</h3>
         <div class="main">
-            <div class="items">
-                <div class="link-item" data-link="mailto:studiorodriguezhuertas@gmail.com?subject=Solicitud%20de%20información%20Studio%20R&H&amp;body=Hola,%20estoy%20interesado(a)%20en%20el%20servicio:">
-                    <img src="img/gmail.png" alt="" class="icon">
-                    <p class="user">studiorodriguezhuertas@gmail.com</p>
-                    <button class="copy-btn">
-                        <i class="fa fa-clone"></i>
-                    </button>
-                </div>
-            </div>
             <div class="items">
                 <div class="link-item" data-link="https://api.whatsapp.com/send/?phone=573044932503&amp;text=Hola%20Jheraldin,%20quiero%20más%20información%20sobre%20el%20servicio ...">
                     <img src="img/whatsapp.png" alt="" class="icon">
@@ -51,9 +42,9 @@
                 </div>
             </div>
             <div class="items">
-                <div class="link-item" data-link="https://www.instagram.com/studiorodriguezhuertas">
+                <div class="link-item" data-link="https://www.instagram.com/studioryh/">
                     <img src="img/instagram.png" alt="" class="icon">
-                    <p class="user">studiorodriguezhuertas</p>
+                    <p class="user">studioryh</p>
                     <button class="copy-btn">
                         <i class="fa fa-clone"></i>
                     </button>
@@ -69,9 +60,9 @@
                 </div>
             </div>
             <div class="items">
-                <div class="link-item" data-link="https://www.tiktok.com/@studiorodriguezhu">
+                <div class="link-item" data-link="https://www.tiktok.com/@studioryh">
                     <img src="img/tiktok.png" alt="" class="icon">
-                    <p class="user">studiorodriguezhu</p>
+                    <p class="user">studior&h</p>
                     <button class="copy-btn">
                         <i class="fa fa-clone"></i>
                     </button>
